@@ -15,10 +15,10 @@ namespace PFO {
 
   void PFOEMPlots::initializePlots(){
 
-    m_PFO_ptEM = Book1D("PFO_PtEM",m_sPFOContainerName + "_PtEM (Entries/1 GeV)",300,-100.0,200.0);
+    m_PFO_ptEM = Book1D("PFO_PtEM",m_sPFOContainerName + "_PtEM (Entries/1 GeV)",30,-10.0,20.0);
     m_PFO_etaEM = Book1D("PFO_EtaEM",m_sPFOContainerName + "_EtaEM (Entries/0.1)",100,-5.0,5.0);
     m_PFO_phiEM = Book1D("PFO_PhiEM",m_sPFOContainerName + "_PhiEM (Entries/0.1)",64,-3.2,3.2);
-    m_PFO_mEM = Book1D("PFO_mEM",m_sPFOContainerName + "_mEM (Entries/100 MeV)",100,0.0,10.0);
+    m_PFO_mEM = Book1D("PFO_mEM",m_sPFOContainerName + "_mEM (Entries/100 MeV)",10,0.0,0.5);
 
   }
 
