@@ -1,3 +1,15 @@
+28 July 2016 Mark Hodgkinson
+Add charged Pt, expected energy deposit and inDensEnrvironment histograms binned in three eta ranges.
+Tag as PFOHistUtils-00-00-13
+
+29 June Mark Hodgkinson
+Update histogram binnings
+Tag as PFOHistUtils-00-00-12
+	
+29 June 2016 Mark Hodgkinson
+Add PFOAlgPropertyPlots	to monitor PFlow algorithm internal variables.
+Tag as PFOHistUtils-00-00-11	
+
 6 July 2015 Mark Hodgkinson
 Fix Coverity issues 19828, 25016,17411,17009,17168 (all related to unitialised histogram pointers)
 Tag as PFOHistUtils-00-00-10
